# shelfily-desktop

./: .gitignore  Cargo.toml  README.md  io.github.yusyel.ShelfilyDesktop.json  meson.build
.github/workflows/: flathub-publish.yml  flatpak-ci.yml  flatpak-release.yml
data/: gschemas.compiled  io.github.yusyel.ShelfilyDesktop.desktop.in  io.github.yusyel.ShelfilyDesktop.gschema.xml  io.github.yusyel.ShelfilyDesktop.metainfo.xml.in  io.github.yusyel.ShelfilyDesktop.service.in  meson.build
data/icons/: meson.build
flatpak/: FLATHUB_SUBMISSION.md  io.github.yusyel.ShelfilyDesktop.Devel.json  io.github.yusyel.ShelfilyDesktop.json  update-cargo-sources.sh
po/: LINGUAS  POTFILES.in  en.po  meson.build
src/: api.rs  application.rs  config.rs  main.rs  meson.build  models.rs  shelfily-desktop.gresource.xml  window.rs  window.ui
src/gtk/: help-overlay.ui
