[package]
name = "shelfily-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
glib-macros = "0.20"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
async-channel = "2"
webkit6 = "0.4"
gstreamer = "0.23"
libsecret = "0.7"
